<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewFotoRaket"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="16dp"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewNamaRaket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/facebookletterfaces"
            android:textColor="@color/maincolor1"
            tools:text="@string/nama_raket" />

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textSize="16sp"
            android:maxLines="2"
            android:fontFamily="@font/facebookletterfaces"
            android:textColor="@color/maincolor1"
            tools:text="@string/harga_raket" />

        <TextView
            android:id="@+id/textViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textSize="16sp"
            android:maxLines="5"
            android:fontFamily="@font/facebookletterfaces"
            android:textColor="@color/maincolor1"
            tools:text="@string/detail" />
    </LinearLayout>
</LinearLayout>