<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HalamanDetail"
    android:background="@color/maincolor2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageViewFotoRaket"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textViewNamaRaket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_detail"
            android:fontFamily="@font/facebookletterfaces"
            android:textColor="@color/maincolor1"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/harga_detail"
            android:fontFamily="@font/facebookletterfaces"
            android:textColor="@color/maincolor1"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/textViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_detail"
            android:fontFamily="@font/facebookletterfaces"
            android:textColor="@color/maincolor1"
            android:textSize="18sp"
            android:maxLines="10"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:padding="10dp"/>
    </LinearLayout>

</ScrollView>